--- a/Faster5/app/src/main/res/layout/layout_check_quit.xml
+++ b/Faster5/app/src/main/res/layout/layout_check_quit.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/title_check_quit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
