--- a/Faster5/app/src/main/res/layout/layout_wait_popup.xml
+++ b/Faster5/app/src/main/res/layout/layout_wait_popup.xml
@@ -160,35 +160,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/layout_marginBottom_20"
+            android:layout_marginBottom="@dimen/layout_marginBottom_30"
             android:layout_marginLeft="@dimen/layout_marginLeft_20"
             android:layout_marginRight="@dimen/layout_marginRight_20"
             android:ellipsize="end"
             android:gravity="center"
             android:lines="1"
-            android:maxLines="3"
             android:paddingLeft="@dimen/paddingLeft_10"
             android:paddingRight="@dimen/paddingRight_10"
             android:text="@string/text_wait_popup"
             android:textColor="#EEA542"
-            android:textSize="@dimen/text_size_xxlarge"
+            android:textSize="@dimen/text_size_xlarge"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/button_cancel"
-            android:layout_width="@dimen/layout_width_250"
-            android:layout_height="@dimen/layout_height_50"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/layout_marginBottom_20"
-            android:layout_marginLeft="@dimen/layout_marginLeft_30"
-            android:layout_marginRight="@dimen/layout_marginRight_30"
-            android:background="@drawable/answer_wrong"
-            android:paddingBottom="@dimen/paddingBottom_10"
-            android:text="@string/btn_cancel_wait_popup"
-            android:textAllCaps="false"
-            android:textColor="#ffffff"
-            android:textSize="@dimen/text_size_large"
-            android:textStyle="bold" />
+        <!--<Button-->
+            <!--android:id="@+id/button_cancel"-->
+            <!--android:layout_width="@dimen/layout_width_250"-->
+            <!--android:layout_height="@dimen/layout_height_50"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_marginBottom="@dimen/layout_marginBottom_20"-->
+            <!--android:layout_marginLeft="@dimen/layout_marginLeft_30"-->
+            <!--android:layout_marginRight="@dimen/layout_marginRight_30"-->
+            <!--android:background="@drawable/answer_wrong"-->
+            <!--android:paddingBottom="@dimen/paddingBottom_10"-->
+            <!--android:text="@string/btn_cancel_wait_popup"-->
+            <!--android:textAllCaps="false"-->
+            <!--android:textColor="#ffffff"-->
+            <!--android:textSize="@dimen/text_size_large"-->
+            <!--android:textStyle="bold" />-->
 
     </LinearLayout>
 </RelativeLayout>
